--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,11 @@
     <title>Mounting and Unmounting</title>
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       You need to enable JavaScript to run this app.
-    </noscript>
+    </noscript> -->
+    <script src="src/index.js"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
